Swagger api documentation finished
