# storage/api-docs/api-docs.json
@@ -22,7 +22,7 @@
         "/apartment": {
             "get": {
                 "tags": [
-                    "Apartments"
+                    "Apartment"
                 ],
                 "description": "Get List of apartments",
                 "operationId": "6a5296ebbabc430c8c3eb850e4113d90",
@@ -70,7 +70,7 @@
                         "description": "Filter by size",
                         "required": false,
                         "schema": {
-                            "type": "numeric"
+                            "type": "number"
                         }
                     },
                     {
@@ -79,7 +79,7 @@
                         "description": "Filter by balcony_size",
                         "required": false,
                         "schema": {
-                            "type": "numeric"
+                            "type": "number"
                         }
                     },
                     {
@@ -124,9 +124,9 @@
             },
             "post": {
                 "tags": [
-                    "Apartments"
+                    "Apartment"
                 ],
-                "description": "Get List of apartments",
+                "description": "Create apartment",
                 "operationId": "a1ef49060bfcbbc2b7e09c8199572d42",
                 "parameters": [
                     {
@@ -164,7 +164,7 @@
                         "schema": {
                             "type": "json"
                         },
-                        "example": "{'size':'numeric','balcony_size':'numeric','location':'string'}"
+                        "example": "{'size':'number','balcony_size':'number','location':'string'}"
                     },
                     {
                         "name": "description",
@@ -204,9 +204,9 @@
         "/apartment/{id}": {
             "put": {
                 "tags": [
-                    "Apartments"
+                    "Apartment"
                 ],
-                "description": "Get List of apartments",
+                "description": "Update apartment",
                 "operationId": "45fb1f343030ddb802c5cf898cc6ccf2",
                 "parameters": [
                     {
@@ -253,7 +253,7 @@
                         "schema": {
                             "type": "json"
                         },
-                        "example": "{'size':'numeric','balcony_size':'numeric','location':'string'}"
+                        "example": "{'size':'number','balcony_size':'number','location':'string'}"
                     },
                     {
                         "name": "description",
@@ -276,7 +276,7 @@
                 ],
                 "responses": {
                     "200": {
-                        "description": "Created",
+                        "description": "Succes",
                         "content": {
                             "application/json": {}
                         }
@@ -291,7 +291,7 @@
             },
             "delete": {
                 "tags": [
-                    "Apartments"
+                    "Apartment"
                 ],
                 "description": "Delete apartment",
                 "operationId": "65ca503de459acaad5d9ffaf6e7d9c20",
@@ -315,6 +315,295 @@
                     },
                     "500": {
                         "description": "Internal server error"
+                    }
+                }
+            }
+        },
+        "/category": {
+            "get": {
+                "tags": [
+                    "Category"
+                ],
+                "description": "Get List of categories",
+                "operationId": "062b0e17b0b265231ad33ece1785b1fe",
+                "responses": {
+                    "200": {
+                        "description": "Created",
+                        "content": {
+                            "application/json": {}
+                        }
+                    },
+                    "500": {
+                        "description": "Internal server error"
+                    }
+                }
+            },
+            "post": {
+                "tags": [
+                    "Category"
+                ],
+                "description": "Create category",
+                "operationId": "8a437c9b58cb5726b37615e8a5a9857c",
+                "parameters": [
+                    {
+                        "name": "name",
+                        "in": "query",
+                        "description": "Category Name",
+                        "required": true,
+                        "schema": {
+                            "type": "string"
+                        }
+                    },
+                    {
+                        "name": "parent_id",
+                        "in": "query",
+                        "description": "ID of parent category ",
+                        "required": false,
+                        "schema": {
+                            "type": "integer"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "Success",
+                        "content": {
+                            "application/json": {}
+                        }
+                    },
+                    "500": {
+                        "description": "Internal server error"
+                    },
+                    "422": {
+                        "description": "Unprocessable Entity - validation failed"
+                    }
+                }
+            }
+        },
+        "/category/{id}": {
+            "put": {
+                "tags": [
+                    "Category"
+                ],
+                "description": "Update category",
+                "operationId": "2aeef67a0c5f4a9161985387cab71ccc",
+                "parameters": [
+                    {
+                        "name": "id",
+                        "in": "path",
+                        "description": "Category id",
+                        "required": true,
+                        "schema": {
+                            "type": "integer"
+                        }
+                    },
+                    {
+                        "name": "name",
+                        "in": "query",
+                        "description": "Category Name",
+                        "required": false,
+                        "schema": {
+                            "type": "string"
+                        }
+                    },
+                    {
+                        "name": "parent_id",
+                        "in": "query",
+                        "description": "ID of parent category ",
+                        "required": false,
+                        "schema": {
+                            "type": "integer"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "Success",
+                        "content": {
+                            "application/json": {}
+                        }
+                    },
+                    "500": {
+                        "description": "Internal server error"
+                    },
+                    "422": {
+                        "description": "Unprocessable Entity - validation failed"
+                    }
+                }
+            },
+            "delete": {
+                "tags": [
+                    "Category"
+                ],
+                "description": "Delete category",
+                "operationId": "c22ffb01fe96cd5baf6a4174466b2672",
+                "parameters": [
+                    {
+                        "name": "id",
+                        "in": "path",
+                        "description": "Category id",
+                        "required": true,
+                        "schema": {
+                            "type": "integer"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "Deleted",
+                        "content": {
+                            "application/json": {}
+                        }
+                    },
+                    "500": {
+                        "description": "Internal server error"
+                    }
+                }
+            }
+        },
+        "/rate": {
+            "post": {
+                "tags": [
+                    "Rate"
+                ],
+                "description": "Rate apartment",
+                "operationId": "6dba292fd82fc585899c28572df24e07",
+                "parameters": [
+                    {
+                        "name": "rating",
+                        "in": "query",
+                        "description": "Apartment Rating (must be between 0 and 5)",
+                        "required": true,
+                        "schema": {
+                            "type": "integer"
+                        }
+                    },
+                    {
+                        "name": "apartment_id",
+                        "in": "query",
+                        "description": "ID of apartment ",
+                        "required": true,
+                        "schema": {
+                            "type": "integer"
+                        }
+                    },
+                    {
+                        "name": "Accept",
+                        "in": "header",
+                        "description": "application/json",
+                        "required": true,
+                        "schema": {
+                            "type": "string"
+                        },
+                        "example": "application/json"
+                    },
+                    {
+                        "name": "Authorization",
+                        "in": "header",
+                        "description": "Token for authorization",
+                        "required": true,
+                        "schema": {
+                            "type": "string"
+                        },
+                        "example": "Bearer ..."
+                    }
+                ],
+                "responses": {
+                    "201": {
+                        "description": "Success",
+                        "content": {
+                            "application/json": {}
+                        }
+                    },
+                    "500": {
+                        "description": "Internal server error"
+                    },
+                    "401": {
+                        "description": "Unauthenticated"
+                    },
+                    "422": {
+                        "description": "Unprocessable Entity - validation failed"
+                    }
+                }
+            }
+        },
+        "/token": {
+            "post": {
+                "tags": [
+                    "Authentication"
+                ],
+                "description": "Rate apartment",
+                "operationId": "1b27039ba743cb512ce66451b64920a1",
+                "parameters": [
+                    {
+                        "name": "email",
+                        "in": "query",
+                        "description": "Email",
+                        "required": true,
+                        "schema": {
+                            "type": "string"
+                        },
+                        "example": "example@examle.com"
+                    },
+                    {
+                        "name": "password",
+                        "in": "query",
+                        "description": "Password",
+                        "required": true,
+                        "schema": {
+                            "type": "string"
+                        }
+                    }
+                ],
+                "responses": {
+                    "422": {
+                        "description": "Unprocessable Entity - validation failed"
+                    }
+                }
+            }
+        },
+        "/subscribe": {
+            "post": {
+                "tags": [
+                    "Subscription"
+                ],
+                "description": "Subscribe to apartment price",
+                "operationId": "81601f1b6058199c7325d28846e3abbb",
+                "parameters": [
+                    {
+                        "name": "price_limit",
+                        "in": "query",
+                        "description": "Price limit for sending notification",
+                        "required": true,
+                        "schema": {
+                            "type": "number"
+                        }
+                    },
+                    {
+                        "name": "apartment_id",
+                        "in": "query",
+                        "description": "ID of apartment ",
+                        "required": true,
+                        "schema": {
+                            "type": "integer"
+                        }
+                    }
+                ],
+                "responses": {
+                    "201": {
+                        "description": "Success",
+                        "content": {
+                            "application/json": {}
+                        }
+                    },
+                    "500": {
+                        "description": "Internal server error"
+                    },
+                    "401": {
+                        "description": "Unauthenticated"
+                    },
+                    "422": {
+                        "description": "Unprocessable Entity - validation failed"
                     }
                 }
             }
